--- a/index.html
+++ b/index.html
@@ -336,6 +336,64 @@
             </div>
         </div>
     </header>
+  <!-- FACE PAGE -->
+        <div id="page-face" class="page-section hidden fade-enter">
+            <div class="max-w-7xl sm:px-6 lg:px-8 mx-auto px-4">
+                <div class="md:col-span-8 mb-12">
+                    <span class="inline-flex items-center rounded-full bg-white/60 backdrop-blur-md px-3 py-1 text-sm font-medium text-stone-600 border border-white/40 mb-6">Facial Procedures</span>
+                    <h1 class="leading-tight sm:text-6xl lg:text-7xl text-5xl font-light text-stone-900 tracking-tight font-manrope">
+                        Refine Your <br><span class="text-stone-500 mix-blend-color-burn">Natural Radiance</span>
+                    </h1>
+                </div>
+
+                <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3">
+                    <div class="group relative overflow-hidden rounded-3xl bg-white/70 backdrop-blur-xl ring-1 ring-white/60 p-6 shadow-sm transition-all hover:shadow-lg">
+                        <div class="aspect-video w-full overflow-hidden rounded-xl bg-stone-100 relative">
+                            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1000&auto=format&fit=crop" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" alt="Buccal Fat">
+                        </div>
+                        <h3 class="mt-4 text-lg font-semibold font-display text-stone-900">Buccal Fat Removal</h3>
+                        <p class="mt-2 text-base text-stone-500 leading-relaxed">Slims the cheeks to define the cheekbones and facial structure.</p>
+                        <button onclick="toggleModal(true)" class="mt-4 text-sm font-medium text-stone-900 underline decoration-stone-300 underline-offset-4 hover:decoration-stone-900 transition-all">Learn more</button>
+                    </div>
+
+                    <div class="group relative overflow-hidden rounded-3xl bg-white/70 backdrop-blur-xl ring-1 ring-white/60 p-6 shadow-sm transition-all hover:shadow-lg">
+                        <div class="aspect-video w-full overflow-hidden rounded-xl bg-stone-100 relative">
+                            <img src="./images/browlift2.png" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" alt="Brow Lift">
+                        </div>
+                        <h3 class="mt-4 text-lg font-semibold font-display text-stone-900">Endoscopic Brow Lift</h3>
+                        <p class="mt-2 text-base text-stone-500 leading-relaxed">Elevate the brow and smooth forehead lines minimally invasively.</p>
+                        <button onclick="toggleModal(true)" class="mt-4 text-sm font-medium text-stone-900 underline decoration-stone-300 underline-offset-4 hover:decoration-stone-900 transition-all">Learn more</button>
+                    </div>
+
+                    <div class="group relative overflow-hidden rounded-3xl bg-white/70 backdrop-blur-xl ring-1 ring-white/60 p-6 shadow-sm transition-all hover:shadow-lg">
+                        <div class="aspect-video w-full overflow-hidden rounded-xl bg-stone-100 relative">
+                            <img src="./images/K3.png" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" alt="Chin Surgery">
+                        </div>
+                        <h3 class="mt-4 text-lg font-semibold font-display text-stone-900">Chin Surgery</h3>
+                        <p class="mt-2 text-base text-stone-500 leading-relaxed">Mentoplasty to reshape, reduce, or augment the chin.</p>
+                        <button onclick="toggleModal(true)" class="mt-4 text-sm font-medium text-stone-900 underline decoration-stone-300 underline-offset-4 hover:decoration-stone-900 transition-all">Learn more</button>
+                    </div>
+
+                    <div class="group relative overflow-hidden rounded-3xl bg-white/70 backdrop-blur-xl ring-1 ring-white/60 p-6 shadow-sm transition-all hover:shadow-lg">
+                        <div class="aspect-video w-full overflow-hidden rounded-xl bg-stone-100 relative">
+                            <img src="https://images.unsplash.com/photo-1614204424926-196a80bf0be8?q=80&w=1000&auto=format&fit=crop" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" alt="Rhinoplasty">
+                        </div>
+                        <h3 class="mt-4 text-lg font-semibold font-display text-stone-900">Rhinoplasty</h3>
+                        <p class="mt-2 text-base text-stone-500 leading-relaxed">Reshaping the nose to achieve facial harmony.</p>
+                        <button onclick="toggleModal(true)" class="mt-4 text-sm font-medium text-stone-900 underline decoration-stone-300 underline-offset-4 hover:decoration-stone-900 transition-all">Learn more</button>
+                    </div>
+
+                    <div class="group relative overflow-hidden rounded-3xl bg-white/70 backdrop-blur-xl ring-1 ring-white/60 p-6 shadow-sm transition-all hover:shadow-lg">
+                        <div class="aspect-video w-full overflow-hidden rounded-xl bg-stone-100 relative">
+                            <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=1000&auto=format&fit=crop" class="h-full w-full object-cover transition duration-500 group-hover:scale-105" alt="Face Lift">
+                        </div>
+                        <h3 class="mt-4 text-lg font-semibold font-display text-stone-900">Face Lift</h3>
+                        <p class="mt-2 text-base text-stone-500 leading-relaxed">Comprehensive rejuvenation addressing sagging skin and deep tissues.</p>
+                         <button onclick="toggleModal(true)" class="mt-4 text-sm font-medium text-stone-900 underline decoration-stone-300 underline-offset-4 hover:decoration-stone-900 transition-all">Learn more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="fixed top-[73px] left-0 right-0 bg-white/95 backdrop-blur-xl border-b border-stone-200/50 shadow-lg transform -translate-y-full transition-transform duration-300 ease-in-out z-40 md:hidden">
